--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -18,6 +19,7 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4"
   }
 }
