--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,5 +58,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "husky": "^9.0.11"
-  }
+  },
+  "proxy": "https://hotelapi.loyalty.dev/api/hotels"
 }
