--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.3.1",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
