--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
     "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "react-slideshow-image": "^4.3.1",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
