--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
     "babel-jest": "^29.7.0",
+    "bootstrap": "^5.3.3",
     "country-codes-list": "^1.6.11",
     "date-fns": "^3.6.0",
     "didyoumean2": "^6.0.1",
@@ -33,6 +34,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-autosuggest": "^10.1.0",
+    "react-bootstrap": "^2.10.4",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
