--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,9 @@
     "google-map-react": "^2.2.1",
     "google-maps-react-markers": "^2.0.10",
     "jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "leaflet": "^1.9.4",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.10.4",
@@ -92,7 +94,8 @@
     "moduleNameMapper": {
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
       "^login/(.*)$": "<rootDir>/src/pages/authentication/login/$1",
-      "^backend/(.*)$": "<rootDir>/../backend/$1"
+      "^backend/(.*)$": "<rootDir>/../backend/$1",
+      "\\.(jpg|jpeg|png|gif|svg)$": "<rootDir>/__mocks__/fileMock.js"
     }
   },
   "proxy": "https://hotelapi.loyalty.dev/api/hotels"
