--- a/frontend/package.json
+++ b/frontend/package.json
@@ -96,7 +96,8 @@
       "^login/(.*)$": "<rootDir>/src/pages/authentication/login/$1",
       "^backend/(.*)$": "<rootDir>/../backend/$1",
       "\\.(jpg|jpeg|png|gif|svg)$": "<rootDir>/__mocks__/fileMock.js"
-    }
+    },
+        "testEnvironment": "jsdom"
   },
   "proxy": "https://hotelapi.loyalty.dev/api/hotels"
 }
