--- a/backend/package.json
+++ b/backend/package.json
@@ -14,16 +14,17 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "didyoumean2": "^7.0.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "http-errors": "~1.6.3",
+    "jest": "^29.6.1",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "stripe": "^16.2.0",
-    "jest": "^29.6.1",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
